# ZkAttestify-RiscZero

apps/: Cargo.toml
apps/src/: local_prover.rs
contracts/: verify_attestation.sol
methods/guest/: Cargo.toml
methods/src/: lib.rs
script/: Deploy.s.sol
tests/: VerifyAttestation.t.sol
