[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
ethers = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
tokio = { version = "1.35", features = ["full"] }
rand_core = "0.6.4"
chrono = "=0.4.38"
serde_json = "1.0.127"
serde = { version = "1.0", features = ["derive"] }
ethers-core = { version = "2.0.14"}
k256 = { version = "0.13", features = ["serde"] }
