[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "VerifyAttestation"
path = "src/bin/main.rs"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.0.5", default-features = false, features = ['std'] }
alloy-core = "0.8.0"
hex-literal = "0.4"
serde = { version = "1.0", features = ["derive"] }
ethers-core = { version = "2.0.14"}
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }
chrono = "=0.4.38"

[profile.release]
lto = "thin"
